--- a/6/films/package.json
+++ b/6/films/package.json
@@ -22,9 +22,11 @@
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.1",
+    "react-spring": "^9.7.3",
     "sort-by": "^1.2.0",
-    "styled-components": "^6.1.6"
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
