--- a/6/films/package.json
+++ b/6/films/package.json
@@ -24,14 +24,16 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.1",
     "react-spring": "^9.7.3",
-    "sort-by": "^1.2.0",
+    "redux": "^5.0.1",
+    "sort-by": "^0.0.2",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
-    "@types/react": "^18.2.43",
+    "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.17.0",
     "@typescript-eslint/parser": "^6.17.0",
