--- a/6/films/package.json
+++ b/6/films/package.json
@@ -17,6 +17,9 @@
     "@mui/icons-material": "^5.15.2",
     "@mui/material": "^5.15.2",
     "@mui/styled-engine-sc": "^6.0.0-alpha.10",
+    "@reduxjs/toolkit": "^2.1.0",
+    "@types/react-redux": "^7.1.33",
+    "axios": "^1.6.7",
     "dotenv": "^16.3.1",
     "js-cookie": "^3.0.5",
     "localforage": "^1.10.0",
@@ -28,6 +31,7 @@
     "react-router-dom": "^6.21.1",
     "react-spring": "^9.7.3",
     "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
     "sort-by": "^0.0.2",
     "styled-components": "^6.1.8"
   },
